infrastructure/k8s/base/document-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: document-processor
  namespace: citation-finder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: document-processor
  template:
    metadata:
      labels:
        app: document-processor
    spec:
      imagePullSecrets:
      - name: citation-finder
      containers:
      - name: document-processor
        image: registry.digitalocean.com/citation-finder/document-processor:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: document-processor
  namespace: citation-finder
spec:
  selector:
    app: document-processor
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
